@@ -3,6 +3,14 @@
 	* Check kernel interface version in fusermount to prevent
 	strangeness in case of mismatch.
 
+	* No need to allocate fuse_conn until actual mount happens
+
+	* Fix potential race between umount and fuse_invalidate
+
+	* Check superblock of proc file in addition to inode number
+
+	* Fix reace between request_send_noreply() and fuse_dev_release()
+
 2004-11-10  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Separate configure for the kernel directory
